<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_categories"
            android:icon="@drawable/ic_category"
            android:title="@string/menu_category" />
        <item
            android:id="@+id/nav_expense_type"
            android:icon="@drawable/ic_compare"
            android:title="@string/menu_expense_type" />
        <item
            android:id="@+id/nav_income"
            android:icon="@drawable/ic_income"
            android:title="@string/menu_income" />
        <item
            android:id="@+id/nav_savings"
            android:icon="@drawable/ic_savings"
            android:title="@string/menu_savings" />
        <item
            android:id="@+id/nav_accounts"
            android:icon="@drawable/ic_accounts"
            android:title="@string/menu_accounts" />
        <item
            android:id="@+id/nav_notes"
            android:icon="@drawable/ic_note"
            android:title="@string/menu_notes" />
        <item
            android:id="@+id/nav_transfers"
            android:icon="@drawable/ic_transfer"
            android:title="@string/menu_transfers" />
        <item
            android:id="@+id/nav_goals"
            android:icon="@drawable/ic_goals"
            android:title="@string/menu_goals" />
    </group>
    <item android:title="@string/menu_system_settings">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_settings"
                android:title="@string/menu_settings" />
        </menu>
    </item>
</menu>
